# DjangoX

./: .gitignore  README.md  pyproject.toml
config/: urls.py
snacks/: models.py  tests.py  views.py
snacks/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
templates/: _base.html
templates/snacks/: snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
